<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.beer2beer.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/radius_30_background">

                <EditText
                    android:id="@+id/equipmentNameEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/equipmentNameEditTextHint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="16dp"
                    android:textColor="@color/textBrown"
                    android:textColorHighlight="@color/textBrown"
                    android:textColorHint="@color/textBrown"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/selectCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start"
                    android:padding="16dp"
                    android:text="@string/category"
                    android:textColor="@color/textBrown"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:popupBackground="@drawable/ic_dropdown_list_background"/>

                <TextView
                    android:id="@+id/capacityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start"
                    android:padding="16dp"
                    android:text="@string/capacity"
                    android:textColor="@color/textBrown"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/shade2">

                    <Button
                        android:id="@+id/subButton"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"

                        android:text="@string/minus"
                        app:cornerRadius="30dp" />

                    <EditText
                        android:id="@+id/quantityEditText"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:ems="10"
                        android:hint="@string/quantityEditText"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:minHeight="48dp"
                        android:gravity="center"
                        android:textColor="@color/textBrown"
                        android:textColorHint="@color/textBrown"
                        android:textSize="14sp"
                        android:background="@android:color/transparent"/>

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/plus"
                        app:cornerRadius="30dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/saveEquipmentButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:padding="10dp"
                    android:text="@string/saveRecipeButton"
                    app:cornerRadius="30dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>