<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.beer2beer.fragments.WelcomeFragment"
        android:label="WelcomeFragment"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_getStarted"
            app:destination="@id/getStartedFragment" />
    </fragment>
    <fragment
        android:id="@+id/getStartedFragment"
        android:name="com.example.beer2beer.fragments.GetStartedFragment"
        android:label="GetStartedFragment"
        tools:layout="@layout/fragment_get_started">
        <action
            android:id="@+id/action_getStarted_to_home"
            app:destination="@id/homeFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>


    <!-- Main Fragments -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.beer2beer.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_addRecipe"
            app:destination="@id/addRecipeFragment" />
        <action
            android:id="@+id/action_home_to_recipeDetail"
            app:destination="@id/recipeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.beer2beer.fragments.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
    </fragment>

    <fragment
        android:id="@+id/brewFragment"
        android:name="com.example.beer2beer.fragments.BrewFragment"
        android:label="@string/brew"
        tools:layout="@layout/fragment_brew">
        <action
            android:id="@+id/action_home_to_recipeDetail"
            app:destination="@id/recipeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.beer2beer.fragments.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_recipes_to_addEquipment"
            app:destination="@id/addEquipmentFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.beer2beer.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <action
        android:id="@+id/action_global_home"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/welcomeFragment"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_global_brew"
        app:destination="@id/brewFragment"
        app:enterAnim="@android:anim/fade_in" />
    <fragment
        android:id="@+id/addRecipeFragment"
        android:name="com.example.beer2beer.fragments.AddRecipeFragment"
        android:label="AddRecipeFragment"
        tools:layout="@layout/fragment_add_recipe">
        <action
            android:id="@+id/action_addRecipe_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/addRecipeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/addEquipmentFragment"
        android:name="com.example.beer2beer.fragments.AddEquipmentFragment"
        android:label="AddEquipmentFragment"
        tools:layout="@layout/fragment_add_equipment">
        <action
            android:id="@+id/action_addEquipment_to_home"
            app:destination="@id/recipesFragment"
            app:popUpTo="@id/addEquipmentFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.example.beer2beer.fragments.RecipeDetailFragment"
        android:label="RecipeDetailFragment"
        tools:layout="@layout/fragment_recipe_detail">
        <argument
            android:name="recipeId"
            app:argType="integer" />
        <argument
            android:name="recipeName"
            app:argType="string" />
        <argument
            android:name="recipeDescription"
            app:argType="string" />
    </fragment>
</navigation>