<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.beer2beer.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/radius_30_background">

                <EditText
                    android:id="@+id/recipeNameEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/recipeNameRequest"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="16dp"
                    android:textColor="@color/textBrown"
                    android:textColorHint="@color/textHint"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/selectIngredientsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start"
                    android:padding="16dp"
                    android:text="@string/ingredients"
                    android:textColor="@color/textBrown"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="6"
                    tools:listitem="@layout/ingredient_item"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:padding="16dp"
                    android:text="@string/description"
                    android:textColor="@color/textBrown"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/recipeDescription"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="38dp"
                    android:padding="16dp"
                    android:textColor="@color/textBrown"
                    android:textColorHint="@color/textHint"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/saveRecipeButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:padding="10dp"
                    android:text="@string/save"
                    app:cornerRadius="30dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>