...
                android:textColor="@color/textBrown"
                android:textColorHint="@color/textHint"
                android:textSize="14sp"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/addButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:cornerRadius="30dp"
                android:text="@string/plus" />
        </LinearLayout>
...
